tests/ui/diagnostic_namespace/on_unknown_item/malformed_attribute.stderr
error[E0432]: Foo
  --> $DIR/malformed_attribute.rs:16:5
   |
LL | use std::str::NotExisting;
   |     ^^^^^^^^^^^^^^^^^^^^^ no `NotExisting` in `str`
   |
   = note: unresolved import `std::str::NotExisting`

warning: missing options for `on_unknown_item` attribute
  --> $DIR/malformed_attribute.rs:2:1
   |
LL | #[diagnostic::on_unknown_item]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: at least one of the `message`, `note` and `label` options are expected
   = note: `#[warn(malformed_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: malformed `on_unknown_item` attribute
  --> $DIR/malformed_attribute.rs:6:31
   |
LL | #[diagnostic::on_unknown_item(foo = "bar", message = "foo")]
   |                               ^^^^^^^^^^^ invalid option found here
   |
   = help: only `message`, `note` and `label` are allowed as options

warning: `label` is ignored due to previous definition of `label`
  --> $DIR/malformed_attribute.rs:10:46
   |
LL | #[diagnostic::on_unknown_item(label = "foo", label = "bar")]
   |                               -------------  ^^^^^^^^^^^^^ `label` is later redundantly declared here
   |                               |
   |                               `label` is first declared here

warning: `message` is ignored due to previous definition of `message`
  --> $DIR/malformed_attribute.rs:14:48
   |
LL | #[diagnostic::on_unknown_item(message = "Foo", message = "Bar")]
   |                               ---------------  ^^^^^^^^^^^^^^^ `message` is later redundantly declared here
   |                               |
   |                               `message` is first declared here

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0432`.
